--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     }
 
     /* Style dla kolorowania OEE i innych wartości */
-    .oee-red { background-color: #ffcccc; color: #cc0000; font-weight: bold; }
-    .oee-orange { background-color: #ffe0b3; color: #e68a00; font-weight: bold; }
-    .oee-yellow { background-color: #ffffcc; color: #ccaa00; font-weight: bold; }
-    .oee-green { background-color: #ccffcc; color: #008000; font-weight: bold; }
+    .oee-red { background-color: #000000; color: #cc0000; font-weight: bold; }
+    .oee-orange { background-color: #000000; color: #e68a00; font-weight: bold; }
+    .oee-yellow { background-color: #000000; color: #ccaa00; font-weight: bold; }
+    .oee-green { background-color: #000000; color: #008000; font-weight: bold; }
 
     /* Ogólne style dla komórek z wartościami */
     .value-cell {
