--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <td id="cell_D4_OEE" class="oee-cell"></td>
         <td id="cell_E4_OEE" class="oee-cell"></td>
         <td id="cell_F4_OEE" class="oee-cell"></td>
-        <td id="oeeTotalCell" class="oee-cell"></td> </tr>
+        <td id="cell_C4_OEE" class="oee-cell"></td> </tr>
       <tr>
         <td><strong>OK</strong></td>
         <td id="cell_D5_OK" class="value-cell"></td>
