--- a/index.html
+++ b/index.html
@@ -159,21 +159,21 @@
         <td id="D4" class="oee-cell"></td>
         <td id="E4" class="oee-cell"></td>
         <td id="F4" class="oee-cell"></td>
-        <td id="G4" class="oee-cell"></td>
+        <td id="C4" class="oee-cell"></td>
       </tr>
       <tr>
         <td><strong>OK</strong></td>
         <td id="D5" class="value-cell"></td>
         <td id="E5" class="value-cell"></td>
         <td id="F5" class="value-cell"></td>
-        <td id="G5" class="value-cell"></td>
+        <td id="C5" class="value-cell"></td>
       </tr>
       <tr>
         <td class="red">NOK</td>
         <td id="D6" class="value-cell"></td>
         <td id="E6" class="value-cell"></td>
         <td id="F6" class="value-cell"></td>
-        <td id="G6" class="value-cell"></td>
+        <td id="C6" class="value-cell"></td>
       </tr>
     </table>
 
@@ -189,7 +189,7 @@
         </tr>
         <tr>
           <td id="H10"></td><td id="I10"></td><td id="J10"></td><td id="K10"></td>
-          <td id="L10"></td><td id="M10"></td><td id="N10"></td><td id="O10"></td>
+          <td id="C21"></td><td id="M10"></td><td id="N10"></td><td id="O10"></td>
         </tr>
       </table>
     </div>
