--- a/index.html
+++ b/index.html
@@ -306,13 +306,13 @@ document.addEventListener('DOMContentLoaded', function() {
         'oeeShift1': { row: 5, col: 'D' },
         'oeeShift2': { row: 5, col: 'E' },
         'oeeShift3': { row: 5, col: 'F' },
-        'oeeTotal': { row: 5, col: 'G' },
+        'oeeTotal': { row: 4, col: 'C' },
 
         // OK (przykładowe mapowanie, dostosuj do swojego arkusza)
         'okShift1': { row: 6, col: 'D' },
         'okShift2': { row: 6, col: 'E' },
         'okShift3': { row: 6, col: 'F' },
-        'okTotal': { row: 6, col: 'G' },
+        'okTotal': { row: 6, col: 'C' },
 
         // NOK (przykładowe mapowanie, dostosuj do swojego arkusza)
         'nokShift1': { row: 7, col: 'D' },
