--- a/index.html
+++ b/index.html
@@ -303,32 +303,32 @@ document.addEventListener('DOMContentLoaded', function() {
         'mainDisplayField': { row: 1, col: 'C' }, // Przykładowo: C1 w arkuszu
 
         // OEE (przykładowe mapowanie, dostosuj do swojego arkusza)
-        'oeeShift1': { row: 5, col: 'D' },
-        'oeeShift2': { row: 5, col: 'E' },
-        'oeeShift3': { row: 5, col: 'F' },
-        'oeeTotal': { row: 4, col: 'C' },
+        'oeeShift1': { row: 2, col: 'D' },
+        'oeeShift2': { row: 2, col: 'E' },
+        'oeeShift3': { row: 2, col: 'F' },
+        'oeeTotal': { row: 2, col: 'C' },
 
         // OK (przykładowe mapowanie, dostosuj do swojego arkusza)
-        'okShift1': { row: 6, col: 'D' },
-        'okShift2': { row: 6, col: 'E' },
-        'okShift3': { row: 6, col: 'F' },
-        'okTotal': { row: 6, col: 'C' },
+        'okShift1': { row: 9, col: 'D' },
+        'okShift2': { row: 9, col: 'E' },
+        'okShift3': { row: 9, col: 'F' },
+        'okTotal': { row: 9, col: 'C' },
 
         // NOK (przykładowe mapowanie, dostosuj do swojego arkusza)
-        'nokShift1': { row: 7, col: 'D' },
-        'nokShift2': { row: 7, col: 'E' },
-        'nokShift3': { row: 7, col: 'F' },
-        'nokTotal': { row: 7, col: 'G' },
+        'nokShift1': { row: 10, col: 'D' },
+        'nokShift2': { row: 10, col: 'E' },
+        'nokShift3': { row: 10, col: 'F' },
+        'nokTotal': { row: 10, col: 'G' },
 
         // GODZINY - WIERSZ 1 (przykładowe mapowanie, dostosuj do swojego arkusza)
-        'h6_r1': { row: 9, col: 'H' },
-        'h7_r1': { row: 9, col: 'I' },
-        'h8_r1': { row: 9, col: 'J' },
-        'h9_r1': { row: 9, col: 'K' },
-        'h10_r1': { row: 9, col: 'L' },
-        'h11_r1': { row: 9, col: 'M' },
-        'h12_r1': { row: 9, col: 'N' },
-        'h13_r1': { row: 9, col: 'O' },
+        'h6_r1': { row: 9, col: 'C' },
+        'h7_r1': { row: 9, col: 'C' },
+        'h8_r1': { row: 9, col: 'C' },
+        'h9_r1': { row: 9, col: 'C' },
+        'h10_r1': { row: 9, col: 'C' },
+        'h11_r1': { row: 9, col: 'C' },
+        'h12_r1': { row: 9, col: 'C' },
+        'h13_r1': { row: 9, col: 'C' },
 
         'h14_r1': { row: 9, col: 'P' },
         'h15_r1': { row: 9, col: 'Q' },
